[gd_scene load_steps=11 format=3 uid="uid://dfl4ht66luubx"]

[ext_resource type="Script" path="res://Scripts/charactersST/player.gd" id="1_ewq7v"]
[ext_resource type="Texture2D" uid="uid://dj3rbgplleckx" path="res://resource/Sprites/characters/players/sprites_player_ajolote-Sheet.png" id="2_vojou"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="3_6l8q6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_53op7"]
bg_color = Color(0, 0, 0, 0.196078)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_lgxgu"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Anim:current_animation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Sprite2D:flip_h")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Name:text")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="Animation" id="Animation_mvyqt"]
resource_name = "CAMINAR"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_bh51l"]
resource_name = "QUIETO"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_7wob4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhbfd"]
_data = {
"CAMINAR": SubResource("Animation_mvyqt"),
"QUIETO": SubResource("Animation_bh51l"),
"RESET": SubResource("Animation_7wob4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5xkd"]
size = Vector2(20, 30)

[node name="PJ" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_ewq7v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_vojou")
hframes = 13
vframes = 12

[node name="UI" type="CanvasLayer" parent="."]

[node name="Virtual joystick left" parent="UI" instance=ExtResource("3_6l8q6")]
offset_top = -300.0
offset_bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_left = 20.0
offset_top = 128.0
offset_right = 1213.0
offset_bottom = 265.0
scale = Vector2(0.2, 0.2)

[node name="Infor_UI" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_53op7")
text = "Infornacion de la partida"

[node name="Chat" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EntradaDeChat" type="LineEdit" parent="UI/Chat"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -416.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_lgxgu")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fhbfd")
}

[node name="Camara" type="Camera2D" parent="."]
position = Vector2(2, -27)
enabled = false
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_t5xkd")

[node name="Name" type="Label" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -24.0
offset_top = -31.0
offset_right = 459.0
offset_bottom = 106.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 100
text = "name null"
horizontal_alignment = 1

[node name="Chat" type="Label" parent="."]
offset_left = -59.0
offset_top = -79.0
offset_right = 1121.0
offset_bottom = 361.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Timers" type="Node" parent="."]

[node name="TimerChat" type="Timer" parent="Timers"]

[connection signal="text_submitted" from="UI/Chat/EntradaDeChat" to="." method="_on_entrada_de_chat_text_submitted"]
[connection signal="timeout" from="Timers/TimerChat" to="." method="_on_timer_chat_timeout"]
